fixed loading page not centered

--- a/frontend/src/styles/core.scss
+++ b/frontend/src/styles/core.scss
@@ -208,8 +208,9 @@ key {
 }
 
 .pageLoading {
+  height: 100%;
   display: grid;
-  justify-content: center;
+  align-items: center;
 }
 
 .pageLoading,
